--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
 
   english_words: ^4.0.0
   provider: ^6.0.0
+  camera: ^0.10.3+2
+  google_ml_kit: ^0.13.0
 
 dev_dependencies:
   flutter_test:
