--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     ext.kotlin_version = '1.7.10'
+    minSdkVersion 21
     repositories {
         google()
         mavenCentral()
@@ -8,6 +9,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        implementation 'androidx.multidex:multidex:2.0.0'
     }
 }
 
