--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,26 +1,23 @@
-name: translate_app
+name: pupil
 description: A new Flutter project.
+publish_to: "none"
 
-publish_to: "none" # Remove this line if you wish to publish to pub.dev
-
-version: 0.0.1+1
+version: 1.0.0+1
 
 environment:
-  sdk: ">=2.19.4 <4.0.0"
+  sdk: ">=2.17.3 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  english_words: ^4.0.0
-  provider: ^6.0.0
-  camera: ^0.10.3+2
-  google_ml_kit: ^0.13.0
+  cupertino_icons: ^1.0.2
+  google_mlkit_text_recognition: ^0.3.0
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^2.0.0
 
 flutter:
