--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,5 +43,6 @@ flutter:
   uses-material-design: true
   assets: 
   - assets/icon/icon.png
+  - assets/avatar/zakuro.jpg
 
 main: lib/titlepage.dart
