Aligned buttons and text with phone sizing and added fonts in pubspec.yaml, as well as styling the translation text into the main.dart container with physics

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,5 +44,9 @@ flutter:
   assets: 
   - assets/icon/icon.png
   - assets/avatar/zakuro.jpg
+  fonts:
+    - family: Garamond
+      fonts:
+        - asset: fonts/garamond.ttf
 
 main: lib/titlepage.dart
