--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: ">=2.17.3 <3.0.0"
 
 dependencies:
+  clickable_list_wheel_view: ^0.2.0
   flutter:
     sdk: flutter
   share_plus: ^6.3.4
