--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.0
   flutter_launcher_icons: "^0.12.0"
+  flutter_native_splash: ^2.2.19
 
 flutter_icons:
   android: "launcher_icon"
@@ -39,6 +40,12 @@ flutter_icons:
   macos:
     generate: true
     image_path: "path/to/image.png"
+
+flutter_native_splash:
+  image: assets/icon/launch_icon.png
+  color: '#FFFFFF'
+  image_dark: assets/icon/dark_launch_icon.png
+  color_dark: '#221C1E'
 
 flutter:
   uses-material-design: true
