--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,12 @@ project 'Runner', {
   'Release' => :release,
 }
 
+# Add language package you need to use
+pod 'GoogleMLKit/TextRecognitionChinese', '~> 4.0.0'
+pod 'GoogleMLKit/TextRecognitionDevanagari', '~> 4.0.0'
+pod 'GoogleMLKit/TextRecognitionJapanese', '~> 4.0.0'
+pod 'GoogleMLKit/TextRecognitionKorean', '~> 4.0.0'
+
 def flutter_root
   generated_xcode_build_settings_path = File.expand_path(File.join('..', 'Flutter', 'Generated.xcconfig'), __FILE__)
   unless File.exist?(generated_xcode_build_settings_path)
